<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollSysOpt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#DFF5FF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDevSO1"
                style="@style/Device_Title" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonReboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_color_with_state"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/reboot"
            android:textColor="@color/list_item_title" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textAuth"
                    style="@style/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth" />

                <CheckBox
                    android:id="@+id/checkAuth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView15"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/web_user" />

            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    style="@style/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/pass" />

                <CheckBox
                    android:id="@+id/checkVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="19dp" />


                <TextView
                    android:id="@+id/textViewVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Visible"
                    android:textSize="15sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSaveSystemConf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color_with_state"
                android:text="@string/save_name"
                android:textColor="@color/list_item_title" />


            <Button
                android:id="@+id/buttonCancelSystemConf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/button_color_with_state"
                android:text="@string/btn_cancel"
                android:textColor="@color/list_item_title" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>
