<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollNetInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#DFF5FF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDevNI1"
                style="@style/Device_Title" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_ssid"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SSID:" />

            <TextView
                android:id="@+id/text_ssid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_ip"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="IP:" />

            <TextView
                android:id="@+id/text_ip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_netmask"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/netmask" />

            <TextView
                android:id="@+id/text_netmaskNi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_gateway"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gateway" />

            <TextView
                android:id="@+id/text_gateway2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_dns"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="DNS:" />

            <TextView
                android:id="@+id/text_dns2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_mac"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="MAC:" />

            <TextView
                android:id="@+id/text_mac2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/text_ntpdate"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ntp_date" />

            <TextView
                android:id="@+id/text_ntpdate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_ntptime"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ntp_time" />

            <TextView
                android:id="@+id/text_ntptime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_lastsync"
                style="@style/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ntp_lastsync" />

            <TextView
                android:id="@+id/text_lastsync2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_color_with_state"
            android:padding="15dp"
            android:text="@string/netinfo_refresh"
            android:textColor="@color/list_item_title" />

    </LinearLayout>

</ScrollView>